# court-vision-nba

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
data/manual/: injuries_2026.csv  rookies_2026.csv  roster_moves_2026.csv  trades_2026.csv
docs/: data_dictionary.md  model_card.md
reports/: development_curves_2026_27.csv  official_standings_2026_27.csv  player_projection_backtest.csv  player_projections_2026_27.csv  playoff_probabilities_2026_27.csv  roster_move_impacts_2026.csv  simulation_metadata.json  team_roster_deltas_2026_27.csv  trade_player_impacts_2026.csv
scripts/: finalize_four_team_trade.py
src/courtvision/data/: fetch_games.py  fetch_player_stats.py  fetch_projection_inputs.py  validate.py
src/courtvision/features/: build_offseason_standings.py  build_roster_projections.py  build_team_seasons.py  build_trade_impact.py
src/courtvision/models/: simulate.py  train_baseline.py
tests/: test_core.py
